Corregir y complementar GameInit de la prueba de integración