@@ -86,7 +86,8 @@ public class Board extends JPanel {
     public void gameInit() {
 
         this.aliens = new ArrayList<>();
-        //System.out.println("Antes de instanciar los aliens en sus posición indicada: longitud de lista alien= 0");
+        System.out.println("------------Pasar el control al constructor de Alien---------------");
+        System.out.println("Antes de instanciar los aliens en sus posición indicada: longitud de lista alien= 0");
         for (int i = 0; i < 4; i++) {
             for (int j = 0; j < 6; j++) {
 
@@ -95,28 +96,29 @@ public class Board extends JPanel {
                 this.aliens.add(alien);
             }
         }
-/*
+
         System.out.println("Después de instanciar los aliens" +
         "\nPosición esperada de primer alien: X=150   Y=5" +
         "\nPosición final de primer alien: X=" + aliens.getFirst().getX() + " Y=" + aliens.getFirst().getY() +
         "\n longitud de lista de alien final = " + aliens.size());
-        System.out.println("---------------------------");*/
+        System.out.println("------------Devolver el control al GameInit---------------");
 
-
-        //System.out.println("Antes de Instanciar el player: player = null");
+        System.out.println("------------Pasar el control al constructor de Player---------------");
+        System.out.println("Antes de Instanciar el player: player = null");
         this.player = new Player();
-        /*System.out.println("Después de instanciar el player:" +
+        System.out.println("Después de instanciar el player:" +
                 "\nPosición esperada de player: X = 179   Y = 280" +
                 "\nPosición final de Player: X = " + this.player.getX() + "  Y = " + this.player.getY());
-        System.out.println("---------------------------");*/
+        System.out.println("------------Devolver el control al GameInit---------------");
 
-        //System.out.println("Antes de instanciar el disparo del jugador: shot = null");
+        System.out.println("------------Pasar el control al Constructor de Shot---------------");
+        System.out.println("Antes de instanciar el disparo del jugador: shot = null");
         this.shot = new Shot();
-/*
+
         System.out.println("Después de instanciar el disparo:" +
                 "\nVisibilidad esperada de shot= true" +
                 "\nVisibilidad final de shot= " + this.shot.isVisible());
-        System.out.println("---------------------------");*/
+        System.out.println("------------Devolver el control al GameInit---------------");
 
     }
     /**
@@ -260,30 +262,33 @@ public class Board extends JPanel {
             timer.stop();
             message = "Game won!";
         }
-            //System.out.println("Antes de empezar la partida la posicion inicial del player es: "+ this.player.getX());
-            this.player.act();
-            /*System.out.println("\nsalida esperada de X: 177 \nsalida final: " + this.player.getX());
-            System.out.println("---------------------------");*/
+        System.out.println("------------Pasar el control al Player act---------------");
+        System.out.println("Antes de empezar la partida la posición inicial del player es: "+ this.player.getX());
+        this.player.act();
+        System.out.println("\nsalida esperada de X: 177 \nsalida final: " + this.player.getX());
+        System.out.println("------------Devolver el control al Update---------------");
 
-           // System.out.println("Antes de empezar la partida la posicion inicial del shot es: "+ this.shot.getY());
-            update_shots();
-            /*System.out.println("\nDespues de ejecutar update_shots(): salida esperada: Y == 1 \nsalida final: " + this.shot.getY());
-            System.out.println("---------------------------");*/
-/*
+        System.out.println("------------Pasar el control al update_shots---------------");
+        System.out.println("Antes de empezar la partida la posicion inicial del shot es: "+ this.shot.getY());
+        update_shots();
+        System.out.println("\nDespues de ejecutar update_shots(): salida esperada: Y == 1 \nsalida final: " + this.shot.getY());
+        System.out.println("------------Devolver el control al Update---------------");
 
-            System.out.println("Antes de empezar la partida la posicion inicial del alien es: "+
-                    "\nX: "+this.aliens.getFirst().getX() + "\nY: " + this.aliens.getFirst().getY());*/
-            update_aliens();
-           /*System.out.println("\nDespues de ejecutar update_aliens():salida esperada X  == 327   salida final X: " + this.aliens.get(0).getX()
-            + "\nsalida esperada Y == 20   salida final Y: " + this.aliens.get(0).getY())  ;
-           System.out.println("---------------------------");*/
+        System.out.println("------------Pasar el control al update_aliens---------------");
+        System.out.println("Antes de empezar la partida la posicion inicial del alien es: "+
+                "\nX: "+this.aliens.getFirst().getX() + "\nY: " + this.aliens.getFirst().getY());
+        update_aliens();
+       System.out.println("\nDespues de ejecutar update_aliens():salida esperada X  == 327   salida final X: " + this.aliens.get(0).getX()
+        + "\nsalida esperada Y == 20   salida final Y: " + this.aliens.get(0).getY())  ;
+        System.out.println("------------Devolver el control al Update---------------");
 
-            /*System.out.println("Antes de empezar la partida la posicion inicial del bomb es: " +
-                    "\nX: "+aliens.getFirst().getBomb().getX() + "\nY: " + aliens.getFirst().getBomb().getY());*/
-            update_bomb();
-            /*System.out.println("\nDespues de ejecutar update_bomb():salida esperada X == 200  salida final X: " + aliens.getFirst().getBomb().getX()+
-            "\n salida esperada Y == 101  salida final Y: " + aliens.getFirst().getBomb().getY());
-            System.out.println("---------------------------");*/
+        System.out.println("------------Pasar el control al update_bomb---------------");
+        System.out.println("Antes de empezar la partida la posicion inicial del bomb es: " +
+                "\nX: "+aliens.getFirst().getBomb().getX() + "\nY: " + aliens.getFirst().getBomb().getY());
+        update_bomb();
+        System.out.println("\nDespues de ejecutar update_bomb():salida esperada X == 200  salida final X: " + aliens.getFirst().getBomb().getX()+
+        "\n salida esperada Y == 101  salida final Y: " + aliens.getFirst().getBomb().getY());
+        System.out.println("------------Devolver el control al Update---------------");
 
     }
     /**
@@ -380,11 +385,12 @@ public class Board extends JPanel {
                     inGame = false;
                     message = "Invasion!";
                 }
-                //System.out.println("\nAntes de mover horizontalmente por el metodo act():posición X=" +aliens.getFirst().getX());
+                System.out.println("------------Pasar el control al alien act---------------");
+                System.out.println("\nAntes de mover horizontalmente por el metodo act():posición X=" +aliens.getFirst().getX());
                 alien.act(direction);
-                /*System.out.println("\nDespués de mover horizontalmente por el metodo act():" +
+                System.out.println("\nDespués de mover horizontalmente por el metodo act():" +
                         "\nAlien posición esperada X = 327    Alien posición final X = " + aliens.getFirst().getX());
-                System.out.println("---------------------------");*/
+                System.out.println("------------Devolver el control al update_aliens---------------");
 
             }
         }
@@ -449,9 +455,11 @@ public class Board extends JPanel {
      * FUNCIÓN RELACIONADA CON LA GESTIÓN DE INTERFAZ. NO ES NECESARIO PROBARLA.
      * */
     private void doGameCycle() {
-
+/*
         update();
         repaint();
+
+ */
     }
     /**FUNCIÓN RELACIONADA CON LA GESTIÓN DE INTERFAZ. NO ES NECESARIO PROBARLA.**/
     private class GameCycle implements ActionListener {
